http-probe.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx
          ports:
            - containerPort: 80
          volumeMounts: 
            - name: nginx-volume
              mountPath: /var/www/html
          livenessProbe:
             httpGet:
                path: /index.html  
                port: 80
      volumes:
        - name: nginx-volume
          hostPath:
            path: /data
