pod-1.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-1
  namespace: policy-namespace1
spec:
  containers:
    - name: nginx
      image: nginx
      ports:
        - containerPort: 80
