pod-2.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-2
  labels:
     app: blue
  namespace: policy-namespace2
spec:
  containers:
    - name: nginx
      image: nginx
      ports:
        - containerPort: 80
