ingress-resource.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata: 
  name: ingress-wear
spec:
  backend:
    serviceName: wear-service
    servicePort: 80
